--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Toboot</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo-container">
+            <img src="images/Logo.png" alt="Logo Toboo" class="logo" />
+            <h1>Toboolist</h1>
+        </div>
+    </header>
 </body>
 </html>
