added section button

--- a/index.html
+++ b/index.html
@@ -14,5 +14,20 @@
             <h1>Toboolist</h1>
         </div>
     </header>
+    <div class="container">
+        <div class="adder">
+            <button name="Add Task" class="button" id="task">Add Task</button>
+            <button name="Add Section" class="button" id="section">Add Section</button>
+        </div>
+        <hr>
+        <main>
+            <div class="new-task">
+                <span class="triangle-down">&blacktriangledown;</span><h2>New Task</h2>
+                <ul>
+                    <li>Quarterly Newsletter <span class="editorial">Editorial</span></li>
+                </ul>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
