added first task

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="new-task">
                 <span class="triangle-down">&blacktriangledown;</span><h2>New Task</h2>
                 <ul>
-                    <li>Quarterly Newsletter <span class="editorial">Editorial</span></li>
+                    <li>
+                        <span class="true">&checkmark;</span> Quarterly Newsletter <span class="editorial">Editorial</span>
+                    </li>
                 </ul>
             </div>
         </main>
