added all post-it

--- a/index.html
+++ b/index.html
@@ -29,6 +29,42 @@
                     </li>
                 </ul>
             </div>
+            
+            <div class="new-task">
+                <span class="triangle-down">&blacktriangledown;</span><h2>Today</h2>
+                <ul>
+                    <li>
+                        <span class="true">&checkmark;</span> Recruiting blog post <span class="post-it editorial">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="true">&checkmark;</span> Mobile app launch <span class="post-it Q1-goals">Q1 Goals</span>
+                    </li>
+                    <li>
+                        <span class="false">&cross;</span> Interview John H. <span class="post-it Recruiting">Recruiting</span>
+                    </li>
+                    <li>
+                        <span class="true">&checkmark;</span> Summit update mobile storefronts <span class="post-it Mobile">Mobile</span>
+                    </li>
+                </ul>
+            </div>
+            
+            <div class="new-task">
+                <span class="triangle-down">&blacktriangledown;</span><h2>New Task</h2>
+                <ul>
+                    <li>
+                        <span class="false">&cross;</span> Quarterly Newsletter
+                    </li>
+                    <li>
+                        <span class="true">&checkmark;</span> Recruiting blog post <span class="post-it Website">Website</span>
+                    </li>
+                    <li>
+                        <span class="true">&checkmark;</span> Recruiting blog post <span class="post-it Sales">Sales</span>
+                    </li>
+                    <li>
+                        <span class="true">&checkmark;</span> Recruiting blog post <span class="post-it editorial">Editorial</span>
+                    </li>
+                </ul>
+            </div>
         </main>
     </div>
 </body>
